<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CreanTreprise</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">Splash</string>
    <string name="blanc">#FFFFFF</string>
    <string name="quitter">QUITTER</string>
    <string name="aide">AIDE</string>
    <string name="logo_application">Logo application</string>
    <string name="title_activity_questionnaire_entree">QuestionnaireEntree</string>
    <string name="action_settings">Settings</string>
    <string name="creerBilan">Créez votre bilan</string>
    <string name="InstJuriMay">Institutions juridiques en Mayenne</string>
    <string name="title_activity_utilisateur_non_concerne">utilisateurNonConcerne</string>
    <string name="nonconcerne">Désolé, vous ne pouvez pas utiliser l\'application.</string>
    <string name="title_activity_reponse_questionnaire">reponseQuestionnaire</string>
    <string name="title_activity_choix_statut">Choix du statut juridique</string>
    <string name="title_activity_entreprise_ind">Entreprise individuelle</string>
    <string name="title_activity_eurl">Eurl</string>
    <string name="title_activity_sarl">Sarl</string>
    <string name="title_activity_sas">Sas</string>
    <string name="title_activity_aide">Aide</string>
    <string name="title_activity_affichagebilan">Creation du Bilan</string>
    <string name="ok">Ok</string>
    <string name="Voir">Voir</string>
    <string name="titre_eurl">Entreprise unipersonnelle à responsabilité limitée</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_test_de_map">Map</string>
    <string name="title_activity_creation_bilan">CreationBilan</string>
    <string name="title_activity_reponse_questionnaire2">reponseQuestionnaire2</string>
    <string name="title_activity_reponse1">reponse1</string>
    <string name="title_activity_reponse2">reponse2</string>
    <string name="title_activity_reponse3">reponse3</string>
    <string name="title_activity_reponse4">reponse4</string>
    <string name="title_activity_reponse5">reponse5</string>

</resources>
