<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#33b5e5"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:id="@+id/quitterbouton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_toRightOf="@+id/aidebouton"
        android:background="@color/background_material_light"
        android:backgroundTint="@color/background_material_light"
        android:text="@string/quitter" />

    <Button
        android:id="@+id/aidebouton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dip"
        android:layout_marginLeft="20dip"
        android:layout_alignBaseline="@+id/quitterbouton"
        android:layout_alignBottom="@+id/quitterbouton"
        android:layout_alignParentLeft="true"
        android:background="@color/background_material_light"
        android:backgroundTint="@color/background_material_light"
        android:text="@string/aide"
        android:layout_alignParentEnd="false" />

    <ImageView
        android:id="@+id/logoentreprise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/quitterbouton"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="171dp"
        android:layout_marginRight="148dp"
        android:layout_marginTop="41dp"
        android:contentDescription="@string/logo_application"
        android:src="@drawable/entrepriselogobright" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:text="@string/creerBilan"
        android:id="@+id/creaBilan"
        android:layout_above="@+id/instJuriMay"
        android:layout_alignLeft="@+id/aidebouton"
        android:layout_alignStart="@+id/aidebouton"
        android:layout_alignRight="@+id/quitterbouton"
        android:layout_alignEnd="@+id/quitterbouton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:text="@string/InstJuriMay"
        android:id="@+id/instJuriMay"
        android:layout_marginBottom="47dp"
        android:layout_above="@+id/quitterbouton"
        android:layout_alignLeft="@+id/creaBilan"
        android:layout_alignStart="@+id/creaBilan"
        android:layout_alignRight="@+id/quitterbouton"
        android:layout_alignEnd="@+id/quitterbouton" />

</RelativeLayout>